--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Vite + React</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css" integrity="sha512-9xKTRVabjVeZmc+GUW8GgSmcREDunMM+Dt/GrzchfN8tkwHizc5RP4Ok/MXFFy5rIjJjzhndFScTceq5e6GvVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
-  <body>
+  <body className="relative">
+    <div id="portal"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
